refactor: UserCommitResponse, UserQuerySerice 정적 팩토리 메서드를 사용하도록 수정